Se agrega onclick a los paginadores de sliders y se agregan botones invisibles en los laterales de los sliders para funcionar como controles de los sliders. Fixes #100 & fixes #96

--- a/src/app/pages/consejos/consejos.page.scss
+++ b/src/app/pages/consejos/consejos.page.scss
@@ -1,7 +1,10 @@
 :host {
   ion-content{
-      --padding-start: 5vw;
-      --padding-end: 5vw;
+    --padding-start: 5vw;
+    --padding-end: 5vw;
+    .swiper-prev, .swiper-next {
+      top: calc(236px - 6vw);
+    }
   }
   h1, p{
     width: 100%;
