--- a/src/app/pages/programs/programs.page.scss
+++ b/src/app/pages/programs/programs.page.scss
@@ -4,6 +4,9 @@
       --padding-end: 5vw;
       font-size: 16px;
       line-height: 1.5;
+      .swiper-prev, .swiper-next {
+        top: calc(120px + -1vw);
+      }
   }
   h1, p {
     width: 100%;
